--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,12 +4,32 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="index.css">
-        <title>Word Search</title>
+        <title>Wordsley</title>
     </head>
 
 
-    <body>
-        
+    <body id="body">
+        <div class="body">
+            <div class="nav">
+                <h1 class="navCubes">Navbar</h1>
+                <li class="li">login</li>
+                <li class="li">home</li>
+                <li class="li">rules</li>
+            </div>
+            <div class="bodySections">
+                <div class="sideNav">
+                    <h1>side Nav</h1>
+                    <ul id="sideNavUl">
+                        <li class="li">home</li>
+                        <li class="li">login</li>
+                        <li class="li">rules</li>
+                    </ul>
+                </div>
+                <div class="content">
+                    <h1>Body</h1>
+                </div>
+            </div>
+        </div>
     </body>
 
 
