--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,22 +11,34 @@
     <body id="body">
         <div class="body">
             <div class="nav">
-                <h1 class="navCubes">Navbar</h1>
-                <li class="li">login</li>
-                <li class="li">home</li>
-                <li class="li">rules</li>
+                <h1 class="navCubes">Wordsley©</h1>
+                <li class="navLi">home</li>
+                <li class="navLi">rules</li>
+                <li class="navLi">login</li>
             </div>
             <div class="bodySections">
                 <div class="sideNav">
-                    <h1>side Nav</h1>
                     <ul id="sideNavUl">
-                        <li class="li">home</li>
-                        <li class="li">login</li>
-                        <li class="li">rules</li>
+                        <li class="sideLi">home</li>
+                        <li class="sideLi">login</li>
+                        <li class="sideLi">rules</li>
                     </ul>
                 </div>
-                <div class="content">
-                    <h1>Body</h1>
+                <div class="verticalContent">
+                    <div class="timerBar">
+                        <div id="timer">Timer</div>
+                        <div id="word">word</div>
+                    </div>
+                    <div class="contentWindow">
+                        <h1>Content</h1>
+                    </div>
+                    <div class="wordList">
+                        <h1>Words li</h1>
+                        <ul class="wordsUl"></ul>
+                    </div>
+                </div>
+                <div class="contentRight">
+                    <h1>High Scores an shit</h1>
                 </div>
             </div>
         </div>
