--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -26,8 +26,17 @@
                 </div>
                 <div class="verticalContent">
                     <div class="timerBar">
-                        <div id="timer">Timer</div>
-                        <div id="word">word</div>
+                        <div id="timer">Timer:
+                            <div class="timer">
+
+                            </div>
+                        </div>
+                        <div id="word">
+                            <h3>Word:</h3>
+                            <div class="wordBox">
+
+                            </div>
+                        </div>
                     </div>
                     <div class="contentWindow">
                         <h1>Content</h1>
