combined front end

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -33,13 +33,13 @@
                         </div>
                         <div id="word">
                             <h3>Word:</h3>
-                            <div class="wordBox">
+                            <div id="display_word"class="wordBox">
 
                             </div>
                         </div>
                     </div>
-                    <div class="contentWindow">
-                        <h1>Content</h1>
+                    <div id="easy-grid" class="contentWindow">
+                        
                     </div>
                     <div class="wordList">
                         <h1>Words li</h1>
