--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="verticalContent">
                     <div class="timerBar">
-                        <div id="timer">Timer:
+                        <div id="timer"> <h3>Timer:</h3>
                             <div class="timer">
 
                             </div>
