Added Word Data

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -12,16 +12,18 @@
         <div class="body">
             <div class="nav">
                 <h1 class="navCubes">Wordsley©</h1>
-                <li class="navLi">home</li>
-                <li class="navLi">rules</li>
-                <li class="navLi">login</li>
+                <li class="navLi">Home</li>
+                <li class="navLi">Rules</li>
+                <li class="navLi">Login</li>
+                <li class="navLi">Word Data</li>
+                </div>
             </div>
             <div class="bodySections">
                 <div class="sideNav">
                     <ul id="sideNavUl">
-                        <li class="sideLi">home</li>
-                        <li class="sideLi">login</li>
-                        <li class="sideLi">rules</li>
+                        <li class="sideLi">Home</li>
+                        <li class="sideLi">Login</li>
+                        <li class="sideLi">Rules</li>
                     </ul>
                 </div>
                 <div class="verticalContent">
@@ -47,7 +49,7 @@
                     </div>
                 </div>
                 <div class="contentRight">
-                    <h1>High Scores an shit</h1>
+                    <h1>High Scores</h1>
                 </div>
             </div>
         </div>
