Added transition to grid support

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -18,7 +18,7 @@
                 <li class="navLi">Word Data</li>
                 </div>
             </div>
-            <div class="bodySections">
+            <div class="bodySections" id="renderDisplay">
                 <div class="sideNav">
                     <ul id="sideNavUl">
                         <li class="sideLi">Home</li>
@@ -26,31 +26,7 @@
                         <li class="sideLi">Rules</li>
                     </ul>
                 </div>
-                <div class="verticalContent">
-                    <div class="timerBar">
-                        <div id="timer"> <h3>Timer:</h3>
-                            <div class="timer">
 
-                            </div>
-                        </div>
-                        <div id="word">
-                            <h3>Word:</h3>
-                            <div id="display_word"class="wordBox">
-
-                            </div>
-                        </div>
-                    </div>
-                    <div id="medium-grid" class="contentWindow"></div>
-                    
-                    <div class="wordList">
-                        <h1>Words li</h1>
-                        <ul class="wordsUl"></ul>
-                    </div>
-                </div>
-                <div class="contentRight">
-                    <h1>High Scores</h1>
-                </div>
-            </div>
         </div>
     </body>
 
