added seeded words

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,8 +14,8 @@
                 <h1 class="navCubes">Wordsley©</h1>
                 <li class="navLi">Home</li>
                 <li class="navLi">Rules</li>
-                <li class="navLi">Login</li>
                 <li class="navLi">Word Data</li>
+                <li class="navLi">Login</li>
                 </div>
             </div>
             <div class="bodySections">
@@ -36,8 +36,8 @@
                         <div id="word">
                             <h3>Word:</h3>
                             <div id="display_word"class="wordBox">
-
                             </div>
+                            <button>Check Word</button>
                         </div>
                     </div>
                     <div id="easy-grid" class="contentWindow">
