Render grid made more modular

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -18,7 +18,7 @@
                 <li class="navLi">Word Data</li>
                 </div>
             </div>
-            <div class="bodySections" id="renderDisplay">
+            <div class="bodySections">
                 <div class="sideNav">
                     <ul id="sideNavUl">
                         <li class="sideLi">Home</li>
@@ -26,6 +26,10 @@
                         <li class="sideLi">Rules</li>
                     </ul>
                 </div>
+                <div class="verticalContent" id="renderDisplay">
+                </div>
+            </div>
+                
 
         </div>
     </body>
