added some css and menu options

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -12,18 +12,18 @@
         <div class="body">
             <div class="nav">
                 <h1 class="navCubes">Wordsley©</h1>
-                <li class="navLi">Home</li>
-                <li class="navLi">Rules</li>
-                <li class="navLi">Word Data</li>
-                <li class="navLi">Login</li>
+                <li data-id="home" class="navLi">Home</li>
+                <!-- <li data-id="rules" class="navLi"></li> -->
+                <li data-id="word-data" class="navLi">Word Data</li>
+                <li data-id="login" class="navLi">Login</li>
                 </div>
             </div>
             <div class="bodySections">
                 <div class="sideNav">
                     <ul id="sideNavUl">
-                        <li class="sideLi">Home</li>
-                        <li class="sideLi">Login</li>
-                        <li class="sideLi">Rules</li>
+                        <li data-id="rules" class="sideLi">Rules</li>
+                        <li data-id="new-game-hard" class="sideLi">New Game</li>
+                        <li data-id="1" class="sideLi"></li>
                     </ul>
                 </div>
                 <div class="verticalContent" id="renderDisplay">
