added menu conformity

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -22,8 +22,8 @@
                 <div class="sideNav">
                     <ul id="sideNavUl">
                         <li data-id="rules" class="sideLi">Rules</li>
-                        <li data-id="new-game-hard" class="sideLi">New Game</li>
-                        <li data-id="1" class="sideLi"></li>
+                        <!-- <li data-id="new-game-hard" class="sideLi">New Game</li>
+                        <li data-id="1" class="sideLi"></li> -->
                     </ul>
                 </div>
                 <div class="verticalContent" id="renderDisplay">
