--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -21,7 +21,7 @@
             <div class="bodySections">
                 <div class="sideNav">
                     <ul id="sideNavUl">
-                        <li data-id="rules" class="sideLi">Rules</li>
+                        <li data-id="rules" class="sideLi" onclick="on()">Rules</li>
                         <!-- <li data-id="new-game-hard" class="sideLi">New Game</li>
                         <li data-id="1" class="sideLi"></li> -->
                     </ul>
@@ -34,7 +34,19 @@
         </div>
     </body>
 
-
+        <div id="overlay" onclick="off()">
+            <div id="text"> </div>
+        </div>
+      
+      <script>
+      function on() {
+        document.getElementById("overlay").style.display = "block";
+      }
+      
+      function off() {
+        document.getElementById("overlay").style.display = "none";
+      }
+      </script>
     <script type="text/javascript" src="index.js" charset="utf-8"></script>
 
 </html>
