how to play section is now overlay

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -21,7 +21,7 @@
             <div class="bodySections">
                 <div class="sideNav">
                     <ul id="sideNavUl">
-                        <li data-id="rules" class="sideLi" onclick="on()">Rules</li>
+                        <li data-id="rules" class="sideLi" onclick="on()">How to Play</li>
                         <!-- <li data-id="new-game-hard" class="sideLi">New Game</li>
                         <li data-id="1" class="sideLi"></li> -->
                     </ul>
@@ -34,9 +34,9 @@
         </div>
     </body>
 
-        <div id="overlay" onclick="off()">
-            <div id="text"> </div>
-        </div>
+    <div id="overlay" onclick="off()">
+        <div id="text"> </div>
+    </div>
       
       <script>
       function on() {
